# persona-decay-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: models.yaml
docs/: anthropic-cache-pitfalls.md  experiment-run-1-analysis.md
scripts/: check_code_limits.py
src/: __main__.py  cache.py  cli.py  config.py  evaluator.py  leaderboard.py  openrouter_client.py  prompts.py  runner.py  runner_helpers.py  scorer.py
tests/: test_cache.py  test_cli.py  test_cli_extended.py  test_config.py  test_coverage_boost.py  test_evaluator.py  test_evaluator_extended.py  test_leaderboard.py  test_openrouter_client.py  test_prompts.py  test_runner.py  test_runner_resume.py  test_scorer.py
