[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-decay-bench"
version = "0.1.0"
description = "Benchmark for LLM persona decay: measures how well AI models sustain assigned persona expression over extended multi-turn conversations."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
persona-decay = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = []

[tool.coverage.report]
fail_under = 95
show_missing = true
